--- a/style/index.css
+++ b/style/index.css
@@ -1,10 +1,29 @@
 .index_menu_planet {
-    /* width: max-content;
-    height: min-content; */
-    margin: auto;
+    margin: 5%;
 }
 
-.index_menu_planet  img{
-    padding: 10px;
-    margin: 0;
+.index_menu_planet img{
+    width: 100%;
+}
+
+.planet_card {
+    display: inline-block;
+    width: 8%;
+    padding: 0.5%;
+    margin: 0.5%;
+
+    border-radius: 20px;
+}
+
+.planet_card p {
+    text-align: center;
+    color: #DDD;
+    font-family: monospace;
+    font-size: 2vw;
+
+    margin: 10% 0;
+}
+
+.planet_card:hover {
+    background-color: #202020;
 }
